--- a/pg1/style.css
+++ b/pg1/style.css
@@ -1,16 +1,33 @@
 html{
     margin:0;
     font-size:10px;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:XanhMono;
     box-sizing: border-box;
     color:rgb(74, 74, 74);
 }
 
 body{
     font-size: 1.6rem;
+    font-family: XanhMono;
     margin: 0;
+    background-color: blue;
+}
+header{
+    color: white;
+    font-family: XanhMono;
+}
+p{
+    color: white;
 }
 
+@font-face {
+    font-family: 'XanhMono';
+    src: url('XanhMono-Regular.ttf') format('.ttf'),
+    url('XanhMono-Regular.ttf') format('.ttf'),
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
 .flex-container{
     display:flex;
     flex-direction: row; 
