--- a/pg1/style.css
+++ b/pg1/style.css
@@ -1,206 +1,108 @@
 html{
     margin:0;
     font-size:10px;
-    font-family:XanhMono;
+    font-family:xanhmono;
     box-sizing: border-box;
     color:rgb(74, 74, 74);
 }
 
 body{
     font-size: 1.6rem;
-    font-family: XanhMono;
+    font-family: xanhmono;
     margin: 0;
     background-color: blue;
 }
 header{
     color: white;
-    font-family: XanhMono;
+    font-family: xanhmono;
+    font-size: 2rem;
+    border-size: 1px;
+    border-bottom:1px solid rgb(193, 193, 193)
+}
+footer{
+    display: flex;
+    font-size: 8rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    position: sticky;
+    justify-content: right;
+    margin-right: 4rem;
+
 }
 p{
     color: white;
 }
 
 @font-face {
-    font-family: 'XanhMono';
-    src: url('XanhMono-Regular.ttf') format('.ttf'),
-    url('XanhMono-Regular.ttf') format('.ttf'),
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-.flex-container{
-    display:flex;
-    flex-direction: row; 
-    height:100vh; 
-    width:100vw; 
+    font-family:'xanhmono';
+    src: url('xanhmono.woff') format('woff'),
+    url('xanhmono.woff') format('woff'),
+
 }
 
-.flex-container--image{
-    width:60%;
-    height:100%;
-    padding: 4rem;
-    padding-top:8rem;
-    padding-left:5rem;
-    margin-right:4rem;
-}
-
-.flex-container--image img{ 
-    width:100%;
-    height:100%;
-}
-
-.flex-container--content{
-    width:30%;
-    height:100vh;
-    overflow:scroll;
-    font-size: small;
-    padding:2rem;
-    margin:1rem;
-    border-left:1px solid #ffffff;
-}
-
-.flex-container--content:hover{
-    border-left:1px solid  rgb(229, 229, 229);
-}
-
-.flex-container--header{
-    color:rgb(206, 206, 206);
-    display:flex;
-    justify-content:end;
-    font-size: small;
-}
-
-.flex-container--header:hover{
-    color:rgb(182, 182, 182);
-}
-
-.description{
-    font-size: smaller;
-    opacity:70%;
-    line-height: 0.6rem;
-    margin-bottom:2rem;
-}
-
-.content-actions{
+.body-text{
     display: flex;
-    justify-content: space-between;
-    border-bottom: 0.5px solid;
-    padding:1rem;
-    opacity:70%;
-    margin-bottom:2rem;
+    margin-left: 6rem;
+    margin-right: 6rem;
+    text-align: justify;
+    font-size: 2.5rem;
 }
 
-.options{
-    font-weight:bold;
-    line-height: 0.6rem;
-}
-.content-toggle--container{
-    display:flex;
-    justify-content: space-around;
+#container {
+    position: absolute;
+    width: 600px;
+    height: 300px;
+    overflow: hidden;
 }
 
-.content-toggle{
-    width:50%; 
-    text-align:center;
-    padding:1rem/*vertical*/ 2rem/*horizontal*/;
+#text-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    white-space: nowrap;
 }
-
-.content-toggle.active{
-    border-bottom: 1px solid rgb(74, 74, 74)
-}
-
-.content-connections{
-    margin-top:1.5rem;
-}
-
-.button-container{
-    text-align: center;
-}
-.button-connect{
-    box-sizing: border-box;
-    border:2px solid rgb(210, 210, 210);
-    text-align: center;
-    padding-left: 5rem;
-    padding-right:5rem;
-    margin-top:2rem;
-    margin-bottom:3rem;
-    width:auto;
+.letter {
     display: inline-block;
-    border-radius:0.25rem;
+    font-size: 24px;
+    color: #333;
 }
 
-.button-connect:hover{
-    border:2px solid rgb(74, 74, 74);
+#demo{
+    font-size: 14rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
 }
 
-.date{
-    font-size: xx-small;
-    opacity:70%;
+.container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+
+  .falling-image {
+    position: absolute;
+    top: -1px; /* Starting position off-screen */
+    left: 0%; /* Center horizontally */
+    transform: translateX(-50%);
+    animation: fall 5s linear infinite; /* Animation duration and timing */
+    width: 250px
+  }
+  
+  @keyframes fall {
+    0% {
+      top: -100px; /* Starting position */
+    }
+    100% {
+      top: 100%; /* Ending position (bottom of the screen) */
+    }
+  }
+
+  .hidden {
+  opacity: 0;
+  transition: opacity 0.5s ease; /* Transition effect for opacity */
 }
 
-.button-drawer{
-    box-sizing: border-box;
-    border:2px solid rgb(193, 193, 193);
-    align-items:center;
-    padding: 1rem;
-    margin-bottom:0.5rem;
-    padding-left:2rem;
-    justify-content: space-between
+.visible {
+  opacity: 1;
 }
-
-.button-drawer:hover{
-    border:2px solid rgb(74, 74, 74);
-}
-
-.button-class{
-    box-sizing: border-box;
-    border:2px solid rgb(193, 193, 193);
-    align-items:center;
-    padding: 1rem;
-    margin-bottom:0.5rem;
-    padding-left:2rem;
-}
-
-.button-class:hover{
-    border:2px solid rgb(74, 74, 74);
-}
-
-.button-yellow{
-    box-sizing: border-box;
-    border:2px solid rgb(193, 193, 193);
-    align-items:center;
-    padding: 1rem;
-    margin-bottom:0.5rem;
-    padding-left:2rem;
-}
-
-.button-yellow:hover{
-    border:2px solid ;
-}
-
-.button-artists{
-    box-sizing: border-box;
-    border:2px solid  rgb(193, 193, 193);
-    align-items:center;
-    padding: 1rem;
-    margin-bottom:0.5rem;
-    padding-left:2rem;
-}
-.button-artists:hover{
-    border:2px solid black;
-}
-
-.button-art{
-    box-sizing: border-box;
-    border:2px solid rgb(147, 229, 164);
-    align-items:center;
-    padding: 1rem;
-    margin-bottom:2rem;
-    color: rgb(51, 175, 86);
-    padding-left:2rem;
-}
-
-.button-art:hover{
-    border:2px solid rgb(51, 175, 86);
-}
-
