--- a/pg4/style.css
+++ b/pg4/style.css
@@ -1,189 +1,67 @@
 html{
     margin:0;
     font-size:10px;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:xanhmono;
     box-sizing: border-box;
     color:rgb(74, 74, 74);
 }
 
 body{
     font-size: 1.6rem;
+    font-family: xanhmono;
     margin: 0;
+    background-color: white;
 }
-
-.flex-container{
-    display:flex;
-    flex-direction: row; 
-    height:100vh; 
-    width:100vw; 
+header{
+    color: rgb(8, 0, 255);
+    font-family: xanhmono;
+    font-size: 2rem;
+    border-size: 1px;
+    border-bottom:1px solid rgb(25, 0, 255)
 }
-
-.flex-container--image{
-    width:60%;
-    height:100%;
-    padding: 4rem;
-    padding-top:8rem;
-    padding-left:5rem;
-    margin-right:4rem;
-}
-
-.flex-container--image img{ 
-    width:100%;
-    height:100%;
-}
-
-.flex-container--content{
-    width:30%;
-    height:100vh;
-    overflow:scroll;
-    font-size: small;
-    padding:2rem;
-    margin:1rem;
-    border-left:1px solid #ffffff;
-}
-
-.flex-container--content:hover{
-    border-left:1px solid  rgb(229, 229, 229);
-}
-
-.flex-container--header{
-    color:rgb(206, 206, 206);
-    display:flex;
-    justify-content:end;
-    font-size: small;
-}
-
-.flex-container--header:hover{
-    color:rgb(182, 182, 182);
-}
-
-.description{
-    font-size: smaller;
-    opacity:70%;
-    line-height: 0.6rem;
-    margin-bottom:2rem;
-}
-
-.content-actions{
+footer{
     display: flex;
-    justify-content: space-between;
-    border-bottom: 0.5px solid;
-    padding:1rem;
-    opacity:70%;
-    margin-bottom:2rem;
+    font-size: 8rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    position: sticky;
+    justify-content: right;
+    margin-right: 4rem;
+
+}
+p{
+    color: white;
 }
 
-.options{
-    font-weight:bold;
-    line-height: 0.6rem;
-}
-.content-toggle--container{
-    display:flex;
-    justify-content: space-around;
+@font-face {
+    font-family:'xanhmono';
+    src: url('xanhmono.woff') format('woff'),
+    url('xanhmono.woff') format('woff'),
+
 }
 
-.content-toggle{
-    width:50%; 
-    text-align:center;
-    padding:1rem/*vertical*/ 2rem/*horizontal*/;
+.body-text{
+    display: flex;
+    margin-left: 4rem;
+    margin-right: 4rem;
+    text-align: justify;
+    font-size: 2.5rem;
 }
 
-.content-toggle.active{
-    border-bottom: 1px solid rgb(74, 74, 74)
+#demo{
+        font-size: 4rem;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        margin: 6rem;
+        color: blue
 }
 
-.content-connections{
-    margin-top:1.5rem;
-}
+  
 
-.button-container{
-    text-align: center;
-}
-.button-connect{
-    box-sizing: border-box;
-    border:2px solid rgb(210, 210, 210);
-    text-align: center;
-    padding-left: 5rem;
-    padding-right:5rem;
-    margin-top:2rem;
-    margin-bottom:3rem;
-    width:auto;
-    display: inline-block;
-    border-radius:0.25rem;
-}
 
-.button-connect:hover{
-    border:2px solid rgb(74, 74, 74);
-}
 
-.date{
-    font-size: xx-small;
-    opacity:70%;
-}
 
-.button-drawer{
-    box-sizing: border-box;
-    border:2px solid rgb(193, 193, 193);
-    align-items:center;
-    padding: 1rem;
-    margin-bottom:0.5rem;
-    padding-left:2rem;
-    justify-content: space-between
-}
 
-.button-drawer:hover{
-    border:2px solid rgb(74, 74, 74);
-}
 
-.button-class{
-    box-sizing: border-box;
-    border:2px solid rgb(193, 193, 193);
-    align-items:center;
-    padding: 1rem;
-    margin-bottom:0.5rem;
-    padding-left:2rem;
-}
-
-.button-class:hover{
-    border:2px solid rgb(74, 74, 74);
-}
-
-.button-yellow{
-    box-sizing: border-box;
-    border:2px solid rgb(193, 193, 193);
-    align-items:center;
-    padding: 1rem;
-    margin-bottom:0.5rem;
-    padding-left:2rem;
-}
-
-.button-yellow:hover{
-    border:2px solid ;
-}
-
-.button-artists{
-    box-sizing: border-box;
-    border:2px solid  rgb(193, 193, 193);
-    align-items:center;
-    padding: 1rem;
-    margin-bottom:0.5rem;
-    padding-left:2rem;
-}
-.button-artists:hover{
-    border:2px solid black;
-}
-
-.button-art{
-    box-sizing: border-box;
-    border:2px solid rgb(147, 229, 164);
-    align-items:center;
-    padding: 1rem;
-    margin-bottom:2rem;
-    color: rgb(51, 175, 86);
-    padding-left:2rem;
-}
-
-.button-art:hover{
-    border:2px solid rgb(51, 175, 86);
-}
 
