--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
     margin: 0;
     background-color: blue;
     border-radius: 2px;
+    min-height: 100vh;
 }
 header{
     color: white;
@@ -79,3 +80,52 @@ p{
     justify-content: center;
 
 }
+
+/*Huge thanks to @tobiasahlin at http://tobiasahlin.com/spinkit/ */
+.footer{
+    min-height: auto;
+    justify-content: end;
+}
+.spinner {
+    margin: 100px auto 0;
+    width: 70px;
+    text-align: center;
+    position: fixed;
+    bottom: 5%;
+    right: 3%;
+  }
+  
+  .spinner > div {
+    width: 18px;
+    height: 18px;
+    background-color: #ffffff;
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  }
+  
+  .spinner .bounce1 {
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+  }
+  
+  .spinner .bounce2 {
+    -webkit-animation-delay: -0.16s;
+    animation-delay: ;
+  }
+  
+  @-webkit-keyframes sk-bouncedelay {
+    0%, 80%, 100% { -webkit-transform: scale(0) }
+    40% { -webkit-transform: scale(1.0) }
+  }
+  
+  @keyframes sk-bouncedelay {
+    0%, 20%, 100% { 
+      -webkit-transform: scale(0);
+      transform: scale(0);
+    } 30% { 
+      -webkit-transform: scale(1.0);
+      transform: scale(1.0);
+    }
+  }
