--- a/pg5/style.css
+++ b/pg5/style.css
@@ -1,189 +1,146 @@
 html{
     margin:0;
     font-size:10px;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:xanhmono;
     box-sizing: border-box;
     color:rgb(74, 74, 74);
 }
 
 body{
-    font-size: 1.6rem;
-    margin: 0;
+    font-size: 4rem;
+    font-family: xanhmono;
+    margin: 2rem;
+    background-color: blue;
+    border-radius: 2px;
 }
-
-.flex-container{
-    display:flex;
-    flex-direction: row; 
-    height:100vh; 
-    width:100vw; 
+header{
+    color: white;
+    font-family: xanhmono;
+    font-size: 2rem;
+    border-bottom:1px solid rgb(193, 193, 193)
 }
-
-.flex-container--image{
-    width:60%;
-    height:100%;
-    padding: 4rem;
-    padding-top:8rem;
-    padding-left:5rem;
-    margin-right:4rem;
-}
-
-.flex-container--image img{ 
-    width:100%;
-    height:100%;
-}
-
-.flex-container--content{
-    width:30%;
-    height:100vh;
-    overflow:scroll;
-    font-size: small;
-    padding:2rem;
-    margin:1rem;
-    border-left:1px solid #ffffff;
-}
-
-.flex-container--content:hover{
-    border-left:1px solid  rgb(229, 229, 229);
-}
-
-.flex-container--header{
-    color:rgb(206, 206, 206);
-    display:flex;
-    justify-content:end;
-    font-size: small;
-}
-
-.flex-container--header:hover{
-    color:rgb(182, 182, 182);
-}
-
-.description{
-    font-size: smaller;
-    opacity:70%;
-    line-height: 0.6rem;
-    margin-bottom:2rem;
-}
-
-.content-actions{
+footer{
     display: flex;
-    justify-content: space-between;
-    border-bottom: 0.5px solid;
-    padding:1rem;
-    opacity:70%;
-    margin-bottom:2rem;
+    font-size: 8rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    position: sticky;
+    justify-content: right;
+    margin-right: 4rem;
 }
 
-.options{
-    font-weight:bold;
-    line-height: 0.6rem;
-}
-.content-toggle--container{
-    display:flex;
-    justify-content: space-around;
+p{
+    color: white;
 }
 
-.content-toggle{
-    width:50%; 
-    text-align:center;
-    padding:1rem/*vertical*/ 2rem/*horizontal*/;
+@font-face {
+    font-family:'xanhmono';
+    src: url('xanhmono.woff') format('woff'),
+    url('xanhmono.woff') format('woff'),
+
 }
 
-.content-toggle.active{
-    border-bottom: 1px solid rgb(74, 74, 74)
+.body-text{
+    display: flex;
+    margin-left: 4rem;
+    margin-right: 4rem;
+    text-align: justify;
+    font-size: 2.5rem;
+    align-items: center;
+    color: white
 }
 
-.content-connections{
-    margin-top:1.5rem;
-}
 
-.button-container{
-    text-align: center;
-}
-.button-connect{
+body {
+    margin: 0;
+    font-size: 10px;
+    font-family: xanhmono;
     box-sizing: border-box;
-    border:2px solid rgb(210, 210, 210);
-    text-align: center;
-    padding-left: 5rem;
-    padding-right:5rem;
-    margin-top:2rem;
-    margin-bottom:3rem;
-    width:auto;
+    color: rgb(74, 74, 74);
+}
+
+.marquee-container {
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    margin: 10px; /* Spacing between marquees */
+    padding-top: 4rem;
+
+}
+
+.marquee-content {
     display: inline-block;
-    border-radius:0.25rem;
+    font-size: 10rem;
+    color: white;
+    width: 100%;
+    animation: marquee 20s linear infinite;
 }
 
-.button-connect:hover{
-    border:2px solid rgb(74, 74, 74);
+.marquee-container.right:hover .marquee-content {
+    animation-play-state: paused
 }
 
-.date{
-    font-size: xx-small;
-    opacity:70%;
+.marquee-container.left:hover .marquee-content {
+    animation-play-state: paused
 }
 
-.button-drawer{
-    box-sizing: border-box;
-    border:2px solid rgb(193, 193, 193);
-    align-items:center;
-    padding: 1rem;
-    margin-bottom:0.5rem;
-    padding-left:2rem;
-    justify-content: space-between
+/* Define two animations with different directions */
+@keyframes marqueeLeft {
+    0% { transform: translateX(-100%); }
+    100% { transform: translateX(100%); }
 }
 
-.button-drawer:hover{
-    border:2px solid rgb(74, 74, 74);
+@keyframes marqueeRight {
+    0% { transform: translateX(100%); }
+    100% { transform: translateX(-100%); }
 }
 
-.button-class{
-    box-sizing: border-box;
-    border:2px solid rgb(193, 193, 193);
-    align-items:center;
-    padding: 1rem;
-    margin-bottom:0.5rem;
-    padding-left:2rem;
+/* Apply different animation based on the class */
+.marquee-container.left .marquee-content {
+    animation: marqueeLeft 12s linear infinite alternate;
 }
 
-.button-class:hover{
-    border:2px solid rgb(74, 74, 74);
+.marquee-container.right .marquee-content {
+    animation: marqueeRight 12s linear infinite alternate;
 }
 
-.button-yellow{
-    box-sizing: border-box;
-    border:2px solid rgb(193, 193, 193);
-    align-items:center;
-    padding: 1rem;
-    margin-bottom:0.5rem;
-    padding-left:2rem;
-}
 
-.button-yellow:hover{
-    border:2px solid ;
-}
+@-webkit-keyframes sk-bouncedelay {
+    0%, 80%, 100% { -webkit-transform: scale(0) }
+    40% { -webkit-transform: scale(1.0) }
+  }
+  
+  @keyframes sk-bouncedelay {
+    0%, 20%, 100% { 
+      -webkit-transform: scale(0);
+      transform: scale(0);
+    } 30% { 
+      -webkit-transform: scale(1.0);
+      transform: scale(1.0);
+    }
+  }
 
-.button-artists{
-    box-sizing: border-box;
-    border:2px solid  rgb(193, 193, 193);
-    align-items:center;
-    padding: 1rem;
-    margin-bottom:0.5rem;
-    padding-left:2rem;
-}
-.button-artists:hover{
-    border:2px solid black;
-}
-
-.button-art{
-    box-sizing: border-box;
-    border:2px solid rgb(147, 229, 164);
-    align-items:center;
-    padding: 1rem;
-    margin-bottom:2rem;
-    color: rgb(51, 175, 86);
-    padding-left:2rem;
-}
-
-.button-art:hover{
-    border:2px solid rgb(51, 175, 86);
-}
-
+  /*Huge thanks to @tobiasahlin at http://tobiasahlin.com/spinkit/ */
+.footer{
+    min-height: auto;
+    justify-content: end;
+  }
+  .spinner {
+    margin: 100px auto 0;
+    width: 70px;
+    text-align: center;
+    position: fixed;
+    bottom: 5%;
+    right: 3%;
+  }
+  
+  .spinner > div {
+    width: 18px;
+    height: 18px;
+    background-color: #ffffff;
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  }
+  
+  
