--- a/pg2/style.css
+++ b/pg2/style.css
@@ -54,6 +54,44 @@ p{
     align-items: center;
 }
 
-
+.footer{
+    min-height: auto;
+    justify-content: end;
+  }
+  .spinner {
+    margin: 100px auto 0;
+    width: 70px;
+    text-align: center;
+    position: fixed;
+    bottom: 5%;
+    right: 3%;
+  }
+  
+  .spinner > div {
+    width: 18px;
+    height: 18px;
+    background-color: #002fff;
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  }
+  
+  
+  @-webkit-keyframes sk-bouncedelay {
+    0%, 80%, 100% { -webkit-transform: scale(0) }
+    40% { -webkit-transform: scale(1.0) }
+  }
+  
+  @keyframes sk-bouncedelay {
+    0%, 20%, 100% { 
+      -webkit-transform: scale(0);
+      transform: scale(0);
+    } 30% { 
+      -webkit-transform: scale(1.0);
+      transform: scale(1.0);
+    }
+  }
+  
 
 
