--- a/pg2/style.css
+++ b/pg2/style.css
@@ -1,97 +1,107 @@
 html{
-    margin:0;
-    font-size:10px;
-    font-family:xanhmono;
-    box-sizing: border-box;
-    color:rgb(74, 74, 74);
+  margin:0;
+  font-size:10px;
+  font-family:xanhmono;
+  box-sizing: border-box;
+  color:rgb(74, 74, 74);
 }
 
 body{
-    font-size: 1.6rem;
-    font-family: xanhmono;
-    margin: 0;
-    background-color: white;
+  font-size: 1.6rem;
+  font-family: xanhmono;
+  margin: 0;
+  background-color: white;
 }
 header{
-    color: blue;
-    font-family: xanhmono;
-    font-size: 2rem;
-    border-bottom:1px solid rgb(38, 0, 255)
+  color: rgb(8, 0, 255);
+  font-family: xanhmono;
+  font-size: 2rem;
+  border-size: 1px;
+  border-bottom:1px solid rgb(25, 0, 255)
 }
 footer{
-    display: flex;
-    font-size: 8rem;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    position: sticky;
-    justify-content: right;
-    margin-right: 4rem;
-}
+  display: flex;
+  font-size: 8rem;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  position: sticky;
+  justify-content: right;
+  margin-right: 4rem;
 
+}
 p{
-    color: blue;
+  color: white;
 }
 
 @font-face {
-    font-family:'xanhmono';
-    src: url('xanhmono.woff') format('woff'),
-    url('xanhmono.woff') format('woff'),
+  font-family:'xanhmono';
+  src: url('xanhmono.woff') format('woff'),
+  url('xanhmono.woff') format('woff'),
 
 }
 
-.container{
-    display: flex;
-    flex-direction: row;
-}
-.punc{
-    display: flex;
-}
 .body-text{
-    display: flex;
-    margin-left: 4rem;
-    margin-right: 4rem;
-    text-align: justify;
-    font-size: 5rem;
-    align-items: center;
+  display: flex;
+  margin-left: 4rem;
+  margin-right: 4rem;
+  text-align: justify;
+  font-size: 2.5rem;
 }
 
-.footer{
-    min-height: auto;
-    justify-content: end;
+#demo{
+      font-size: 4rem;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      margin: 6rem;
+      color: blue
+}
+
+   
+
+.spinner {
+  margin: 100px auto 0;
+  width: 70px;
+  text-align: center;
+  position: fixed;
+  bottom: 5%;
+  right: 3%;
+}
+
+.spinner > div {
+  width: 18px;
+  height: 18px;
+  background-color: #0800ff;
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+  0%, 20%, 100% { 
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  } 30% { 
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
   }
-  .spinner {
-    margin: 100px auto 0;
-    width: 70px;
-    text-align: center;
-    position: fixed;
-    bottom: 5%;
-    right: 3%;
-  }
-  
-  .spinner > div {
-    width: 18px;
-    height: 18px;
-    background-color: #002fff;
-    border-radius: 100%;
-    display: inline-block;
-    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-  }
-  
-  
-  @-webkit-keyframes sk-bouncedelay {
-    0%, 80%, 100% { -webkit-transform: scale(0) }
-    40% { -webkit-transform: scale(1.0) }
-  }
-  
-  @keyframes sk-bouncedelay {
-    0%, 20%, 100% { 
-      -webkit-transform: scale(0);
-      transform: scale(0);
-    } 30% { 
-      -webkit-transform: scale(1.0);
-      transform: scale(1.0);
-    }
-  }
-  
+}
+
+
+
+
+
+
+
+
+
+
 
 
