--- a/pg10/style.css
+++ b/pg10/style.css
@@ -76,8 +76,19 @@ p{
     -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
     animation: sk-bouncedelay 1.4s infinite ease-in-out both;
   }
+
+#demo{
+    font-size: 4rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    color: blue;
+    margin:4rem;
+    text-align: justify
+
+}
   
-   
+
   @-webkit-keyframes sk-bouncedelay {
     0%, 80%, 100% { -webkit-transform: scale(0) }
     40% { -webkit-transform: scale(1.0) }
