--- a/pg6/style.css
+++ b/pg6/style.css
@@ -93,3 +93,13 @@ p{
     }
   }
 
+  #demo{
+    font-size: 4rem;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin: 6rem;
+    color: blue
+}
+
